@@ -22,6 +22,10 @@
       <licence tarname="gdb-%-mingw32-%-doc.tar.%" />
 
       <component class="bin">
+        <release tarname="gdb-7.4-2-mingw32-bin.tar.lzma" >
+          <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
         <release tarname="gdb-7.3.1-1-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
@@ -44,6 +48,7 @@
       </component>
 
       <component class="doc">
+        <release tarname="gdb-7.4-2-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3.1-1-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3-2-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3-1-mingw32-doc.tar.lzma" />
@@ -51,6 +56,32 @@
       </component>
     </package>
 
+    <package name="mingw32-gdb-python" alias="gdb-python">
+      <affiliate group="MinGW Base System" />
+      <description lang="en" title="Python enabled GNU Source-Level Debugger">
+        <paragraph>
+          GDB is a source-level debugger, capable of breaking programs at
+          any specific line, displaying variable values, and determining
+          where errors occurred.  Currently, it works for C, C++, Fortran,
+          Modula 2 and Java programs.  A must-have for any serious
+          programmer.  This particular version is Python enabled.
+        </paragraph>
+      </description>
+
+      <source tarname="gdb-python-%-mingw32-%-src.tar.%" />
+      <licence tarname="gdb-python-%-mingw32-%-doc.tar.%" />
+
+      <component class="bin">
+        <release tarname="gdb-python-7.4-2-mingw32-bin.tar.lzma" >
+          <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
+      </component>
+
+      <component class="doc">
+        <release tarname="gdb-python-7.4-2-mingw32-doc.tar.lzma" />
+      </component>
+    </package>
   </package-collection>
 </software-distribution>
 <!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
